@@ -88,6 +88,7 @@
 		  <property name="rules_hint">False</property>
 		  <property name="reorderable">False</property>
 		  <property name="enable_search">True</property>
+		  <signal name="button_press_event" handler="on_romversion_button_press_event" object="romversion_dbox" last_modification_time="Thu, 14 Jul 2005 12:32:55 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
