@@ -7,6 +7,7 @@ SubVersion: $Id$
 		was not retrieved fine from .ini file when the ratio contains ',' instead of '.'
 	- [kevin] $1572/1573: handle program entry breakpoints on _main for kernel/Fargo programs
 	- [kevin] $1574/1575: implemented HW3 RTC
+	- [roms]  $1577: can choose HW1/HW2 when importing a tib file
 
 - 23/06/2005, version 2.00-rc5:
 	- [roms] $1525: merged Kevin's change in rev $1524 (recfile).
